# starpath-preview

./: .gitignore  LICENSE  charbuilder.html  compendium.html  index.html  load-components.js  login-modal.html  navbar.html  package.json  style.css  tailwind.config.js  themeManager.js  vercel.json
components/: footer.html  login-modal.html  navbar.html
dioxus/: .gitignore  Cargo.toml  Dioxus.toml
dioxus/src/: app.rs  main.rs
dioxus/src-tauri/: Cargo.toml  tauri.conf.json
dioxus/src-tauri/src/: main.rs
dioxus/src/benchmarks/: infinite_scroll.rs  mod.rs
leptos/: Cargo.toml  Trunk.toml  style.css  styles.css  tailwind.config.js
leptos/src/: app.rs  main.rs
leptos/src-tauri/: Cargo.toml  tauri.conf.json
leptos/src-tauri/src/: main.rs
leptos/src/benchmarks/: mod.rs
leptos/src/benchmarks/component_tree/: mod.rs
leptos/src/benchmarks/infinite_scroll/: mod.rs
leptos/src/benchmarks/ui_performance/: mod.rs
pathbuilder/: ldsring.css  net_dicecode-min.js  net_global.css  net_pathbuilder-lm-min.css  net_pathbuilder-min.css  net_toggle.css
solids/: .gitignore  astro.config.mjs  package.json  style.css  tailwind.config.js  tsconfig.json
solids/src-tauri/: Cargo.toml  tauri.conf.json
solids/src/benchmarks/: types.ts  utils.ts
solids/src/benchmarks/componentTree/: ComponentTreeBench.tsx  ComponentTreeWrapper.tsx  TreeNode.tsx  data.ts  types.ts
solids/src/components/: App.tsx  BottomNav.tsx  NavRail.tsx  Navigation.tsx  TopNav.tsx  types.ts
solids/src/pages/: benchmark.astro  component-tree.astro  index.astro  infinite-scroll.astro  ui-performance.astro
solids/src/styles/: App.css
utils/: load-components.js
(+9 files in other folders)
