[package]
name = "dioxus-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.5", features = ["web"] }
dioxus-logger = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys =  { version = "0.3", features = [
    "Window",
    "IntersectionObserver",
    "IntersectionObserverEntry"
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
uuid = { version = "1.11.0", features = ["v4", "js"] }
serde_json = "1.0.132"
futures-util = "0.3.31"

[workspace]
members = ["src-tauri"]
