[package]
name = "leptos-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
strum = { version = "0.26.3" ,features = ["derive"]}
leptos = { version = "0.6.15", features = ["csr"] }
leptos-use = "0.13.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = [
    "Performance",
    "Window",
    "Document",
    "Element",
    "DomRect",
    "HtmlElement",
    "CssStyleDeclaration",
    "AnimationEvent",
    "TransitionEvent"
] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.7", features = ["v4", "js"] }
regex = "1.11.1"
rand = "0.9.0-alpha.2"
[workspace]
members = ["src-tauri"]
